# rust-teraform-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: API.md  openapi.json  openapi.yaml
migrations/: 20240101000000_create_users_table.sql  20240101000001_create_todos_table.sql  20240101000002_create_refresh_tokens_table.sql
rust_tutorial/: Cargo.toml.md  terraform.md
rust_tutorial/src/: main.md
rust_tutorial/src/application/dto/: todo.md
rust_tutorial/src/application/services/: todo_service.md
rust_tutorial/src/domain/entities/: todo.md
rust_tutorial/src/presentation/handlers/: todo_handlers.md
src/: main.rs
src/application/dto/: auth_dto.rs  mod.rs  todo_dto.rs
src/application/services/: auth_service.rs  mod.rs  todo_service.rs
src/domain/entities/: mod.rs  todo.rs  user.rs
src/domain/repositories/: mod.rs  todo_repository.rs  user_repository.rs
src/infrastructure/: config.rs  mod.rs
src/infrastructure/auth/: jwt.rs  password.rs
src/infrastructure/persistence/postgres/: mod.rs  (+2 more)
src/presentation/: openapi.rs
src/presentation/handlers/: auth_handlers.rs  mod.rs  todo_handlers.rs
src/presentation/middleware/: auth_middleware.rs  mod.rs
src/presentation/routes/: auth_routes.rs  mod.rs  todo_routes.rs
src/shared/: error.rs
terraform/: apis.tf  cloud_run.tf  cloud_sql.tf  iam.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf  vpc.tf
tests/: health_test.rs
tests/api/: auth_test.rs  mod.rs  todo_test.rs
tests/common/: mod.rs
(+2 files in other folders)
