[package]
name = "rust-teraform-backend"
version = "0.1.0"
edition = "2021"
default-run = "rust-teraform-backend"

[dependencies]
# Web framework
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.0"
argon2 = "0.5"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Date/Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Environment
dotenvy = "0.15.7"

# YAML serialization
serde_yaml = "0.9"

# OpenAPI
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[[bin]]
name = "generate_docs"
path = "src/bin/generate_docs.rs"

[dev-dependencies]
axum-test = "17"
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
